# solar-data-tools

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  maintenance.md  pvi-dev.yml  pvi-user.yml  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/: instructions.txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature-request.md
.github/workflows/: build-test.yml  build.yml  lint.yml  main-test.yml  publish-image.yaml  release.yml  test-build.yml  test-pypi.yml  test.yml
.oldcircle/: config.yml
.scripts/: ci-utilities.sh  release.sh
.travis/: setup_mosek.sh
Dask/: README.md
Dask/emr/: README.md  bootstrap.sh  demo.ipynb
Dask/fargate/: Dockerfile  demo.ipynb  readme.md
Dask/gcp/: README.md  dask.sh  demo_cassandra_worker_pulls_own_data.ipynb  demo_cassandra_worker_pulls_own_data.py  demo_pvdaq_worker_pulls_own_data.ipynb  demo_shared_df.ipynb
Dask/ssh_cluster_setup/: README.md  requirements.txt  ssh_cluster_example.py
Parallelization/In-pipeline Parallelization/: README.md
Parallelization/in-pipeline/: DAG.jam  In-pipeline parallelization.ipynb
Parallelization/profiling/: README.md
Parallelization/runner/: README.md  demo.ipynb
anomalydetector/: __init__.py  detector_model.py  multidata_handler.py  utils.py
conda_recipe/: meta.yaml
dask/fargate/: Dockerfile  readme.md
data/: README.md  selected_sites.txt
dataviewer/: DataViewer-MASTER.ipynb
docker/: Dockerfile  README.md  requirements.txt
docs/: README.md  conf.py  environment.yml  index.rst  requirements.txt
docs/source/: algorithms.rst  api.rst  conf.py  index.rst  index_api_reference.rst  index_dev.rst  index_getting_started.md  index_getting_started.rst  index_project_details.rst  index_user_docs.rst  index_user_guide.md  install.rst  license.rst  modules.rst  setup.rst  solardatatools.algorithms.rst  solardatatools.rst  tech_details.rst  usage.rst
notebooks/: ClearDayDetection.ipynb  Clear_sky_modeling_and_detection_example.ipynb  FixTimeShifts.ipynb  Parameter_Estimation_Example.ipynb  Report-SensorIdentificationNIST.ipynb  SCSF_usage_with_PVDAQ_data.ipynb  Signal_dilatation.ipynb  Soiling_analysis_demonstration.ipynb  Statistical_Clear_Sky_Fitting_Integration.ipynb  TAC2_scratchwork.ipynb  _DataHandler_Demo-No_MOSEK.ipynb  _DataHandler_Demo.ipynb  _DataHandler_Demo2.ipynb  function_example.ipynb  runner.ipynb
notebooks/archive/: ClearDayDetection.ipynb  Clear_sky_modeling_and_detection_example.ipynb  FixTimeShifts.ipynb  MultiData_Try.ipynb  Parameter_Estimation_Example.ipynb  Parameter_Estimation_Example_Light.ipynb  Report-SensorIdentificationNIST.ipynb  Signal_dilatation.ipynb  Signal_dilation.ipynb  Soiling_analysis_demonstration.ipynb  TAC2_scratchwork.ipynb  _DataHandler_Demo-No_MOSEK.ipynb  _DataHandler_Demo.ipynb  _DataHandler_Demo2.ipynb
notebooks/examples/: BundtCakePlot_Demo.ipynb  ClearSkyDetection_Demo.ipynb  ClearSkyEstimation_Demo.ipynb  DataHandler_Constellation_Demo-Default.ipynb  DataHandler_Demo-Default.ipynb  DataHandler_Demo-Default_QSS_OSQP.ipynb  DataHandler_Demo-MOSEK.ipynb  DataHandler_Demo-QSS_only.ipynb  QLinear_Demo.ipynb  redshift_database_example.ipynb
paper/: paper.bib  paper.md
paper/jats/: paper.jats
parallelization/in-pipeline parallelization/: parallel_data_handler.py
parallelization/mvp/: README.md
pvsystemprofiler/: estimator.py  git_version  ground_truth_estimator.py  latitude_study.py  longitude_study.py  tilt_azimuth_study.py
pvsystemprofiler/algorithms/: optimized_sunrise_sunset.py  performance_model_estimation.py
pvsystemprofiler/scripts/: parameter_estimation_script.py  run_partition_script.py
pvsystemprofiler/utilities/: angle_of_incidence_function.py  declination_equation.py  equation_of_time.py  hour_angle_equation.py  progress.py  sunset_hour_angle_equation.py  time_convert.py  tools.py
sdt_dask/: README.md  tool_demo.ipynb  tool_demo_local.ipynb
sdt_dask/clients/: Dockerfile  README.md  clientplug.py  clients.py  local.py  local_client.py  requirements.txt  sdt-v1_full_pip_list.txt
sdt_dask/dask_tool/: README.md  runner-dask-apis.ipynb  runner.py  sdt_dask.py
sdt_dask/dataplugs/: README.md  S3Bucket_plug.py  csv_plug.py  dataplug.py  dataplug_examples.ipynb  pvdaq_plug.py  pvdb_plug.py
sdt_dask/docker/: requirements.txt  sdt-v1_full_pip_freeze.txt
sdt_dask/examples/: fargate_example_script.py  rev_azu_base_dask.py  rev_far_base_dask.py  rev_far_pvdb_dask.py  rev_loc_base_dask.py  revised_baseline.py  revised_baseline_dask.py  revised_fargate.py  tool_demo_S3_fargate.ipynb  tool_demo_SDTDask.ipynb  tool_demo_azure.ipynb  tool_demo_ec2.ipynb  tool_demo_fargate.ipynb  tool_demo_fargate_client.ipynb  tool_demo_local.ipynb  tool_demo_local_csv.ipynb  tool_demo_local_pvdaq.ipynb  tool_demo_local_redshift.ipynb  tool_demo_local_s3bucket.ipynb
solar-data-tools/: clear_day_detection.py  data_transforms.py
solardatatools/: __init__.py  _cvx_signal_decompositions.py  _osd_signal_decompositions.py  _version.py  bundt_plotting_test.py  circular_statistics.py  clear_day_detection.py  clear_time_labeling.py  cvx_signal_decompositions.py  data_filling.py  data_handler.py  data_quality.py  data_transforms.py  dataio.py  daytime.py  load_redshift_data.py  matrix_embedding.py  model_soiling.py  osd_signal_decompositions.py  osd_signal_decompositions_1.py  osd_signal_decompositions_2.py  plotting.py  polar_transform.py  pvpro_post_processing.py  sdt_runner.py  sensor_identification.py  signal_decompositions.py  signal_decompositions_osd.py  solar_noon.py  sunrise_sunset.py  time_axis_manipulation.py  utilities.py
solardatatools/algorithms/: __init__.py  capacity_change.py  clear_sky_detection.py  clipping.py  dilatation.py  dilation.py  interpolation.py  loss_factor_analysis.py  quantile_estimation.py  shade.py  soiling.py  (+2 more)
statistical_clear_sky/: __init__.py  configuration.py  dataviewer.py
todo/: authors.rst
(+416 files in other folders)
